# Csgo-Sticker-color-Picker

./: index.html  package-lock.json  package.json  vite.config.ts
downloadStickersData/: .gitignore  pyproject.toml
downloadStickersData/downloadStickersData/: __init__.py  cleandata.py  colorstuff.py
src/: App.tsx  csgo_stickers_data.json  index.scss  index.tsx
src/Pages/: SearchByColor.module.scss  SearchByColor.tsx
src/components/: colorPicker.module.scss  colorPicker.tsx  index.ts  stickerCard.module.scss  stickerCard.tsx
src/data/: csgo_stickers_data.json  index.ts
src/types/: index.ts
src/util/: index.ts
