[tool.poetry]
name = "downloadStickersData"
version = "0.1.0"
description = ""
authors = ["tomast1337 <vycasnicolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
selenium = "^4.4.3"
pandas = "^1.4.4"
scipy = "^1.9.1"
matplotlib = "^3.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
